<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.usp05.githubtry.item_manipulation.AddItemActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="62dp"
        android:text="Name*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Quantity"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="Location*"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="Date Purchased"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="Price"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Category"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Note"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/ET_note"
        android:layout_width="297dp"
        android:layout_height="62dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ET_category"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/ET_price" />

    <EditText
        android:id="@+id/ET_dateExpired"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/ET_datePurchased" />

    <EditText
        android:id="@+id/ET_price"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/ET_dateExpired" />

    <EditText
        android:id="@+id/ET_datePurchased"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/ET_location" />

    <EditText
        android:id="@+id/ET_location"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/ET_quantity" />

    <EditText
        android:id="@+id/ET_quantity"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/ET_name" />

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/saveBTN"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:onClick="onEditSaveClick"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/addMoreBTN"
        app:layout_constraintEnd_toEndOf="@+id/ET_note"
        app:layout_constraintTop_toTopOf="@+id/addMoreBTN" />

    <Button
        android:id="@+id/deleteBTN"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:onClick="onEditDeleteClick"
        android:text="Delete"
        app:layout_constraintStart_toStartOf="@+id/ET_note"
        app:layout_constraintTop_toBottomOf="@+id/ET_note" />

<Button
    android:id="@+id/addMoreBTN"
    android:layout_width="102dp"
    android:layout_height="39dp"
    android:layout_marginEnd="25dp"
    android:layout_marginRight="25dp"
    android:text="Add More"
    app:layout_constraintBottom_toBottomOf="@+id/deleteBTN"
    app:layout_constraintEnd_toStartOf="@+id/saveBTN"
    app:layout_constraintTop_toTopOf="@+id/deleteBTN" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Expiration Date"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</android.support.constraint.ConstraintLayout>