...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginClick"
        android:text="Login" />

    <Button
        android:id="@+id/signUpButton"
        style="@android:style/Widget.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignUpClick"
        android:text="Sign Up" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
...
